[gd_scene load_steps=16 format=2]

[ext_resource path="res://fonts/font_normal.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/AdvancedOptions.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/Staatliches-Regular.ttf"

[sub_resource type="DynamicFont" id=12]
size = 50
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.933333, 0.882353, 0.811765, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.933333, 0.882353, 0.811765, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.933333, 0.882353, 0.811765, 1 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="Theme" id=11]
LineEdit/colors/font_color = Color( 0.239216, 0.160784, 0.317647, 1 )
LineEdit/styles/focus = SubResource( 14 )
LineEdit/styles/normal = SubResource( 15 )
TextEdit/colors/font_color = Color( 0.239216, 0.160784, 0.317647, 1 )
TextEdit/constants/line_spacing = -4
TextEdit/fonts/font = ExtResource( 1 )
TextEdit/styles/normal = SubResource( 6 )
VScrollBar/styles/grabber = SubResource( 7 )
VScrollBar/styles/grabber_highlight = SubResource( 8 )
VScrollBar/styles/grabber_pressed = SubResource( 9 )
VScrollBar/styles/scroll = SubResource( 10 )

[sub_resource type="StyleBoxLine" id=13]
color = Color( 0.933333, 0.882353, 0.811765, 1 )
thickness = 2

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.345098, 0.254902, 0.411765, 1 )

[node name="ScrollContainer" type="ScrollContainer"]
anchor_left = 0.333
anchor_top = 0.044
anchor_right = 0.333
anchor_bottom = 0.044
margin_left = 0.399994
margin_right = 759.4
margin_bottom = 1015.48
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 759.0
margin_bottom = 1015.48
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_right = 759.0
margin_bottom = 1015.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 755.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 12 )
text = "Version"

[node name="VersionContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 755.0
margin_bottom = 72.0
custom_constants/margin_left = 2

[node name="Revision" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VersionContainer"]
margin_left = 2.0
margin_right = 171.0
margin_bottom = 72.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VersionContainer/Revision"]
margin_right = 169.0
margin_bottom = 34.0
size_flags_horizontal = 3
text = "Revision to update to:"

[node name="Text" type="LineEdit" parent="MarginContainer/VBoxContainer/VersionContainer/Revision"]
margin_top = 38.0
margin_right = 60.0
margin_bottom = 72.0
grow_vertical = 0
rect_min_size = Vector2( 50, 22 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 11 )
text = "fgfd"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 755.0
margin_bottom = 32.0
custom_constants/separation = 32
custom_styles/separator = SubResource( 13 )

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 755.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 12 )
text = "Launcher settings"

[node name="Threads" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 755.0
margin_bottom = 117.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Threads"]
margin_right = 755.0
margin_bottom = 34.0
text = "Volume Slider"

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Threads"]
margin_top = 38.0
margin_right = 755.0
margin_bottom = 54.0
min_value = -50.0
max_value = 50.0
value = 1.0

[node name="LauncherContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 117.0
margin_right = 755.0
margin_bottom = 1011.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/LauncherContainer"]
margin_left = 4.0
margin_right = 747.0
margin_bottom = 890.0

[node name="Threads" type="VBoxContainer" parent="MarginContainer/VBoxContainer/LauncherContainer/VBoxContainer"]
margin_right = 743.0
margin_bottom = 72.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/LauncherContainer/VBoxContainer/Threads"]
margin_right = 743.0
margin_bottom = 34.0
text = "No. of threads"

[node name="Text" type="LineEdit" parent="MarginContainer/VBoxContainer/LauncherContainer/VBoxContainer/Threads"]
margin_top = 38.0
margin_right = 60.0
margin_bottom = 72.0
rect_min_size = Vector2( 50, 22 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 11 )

[node name="MaxDLSpeed" type="VBoxContainer" parent="MarginContainer/VBoxContainer/LauncherContainer/VBoxContainer"]
visible = false
margin_top = 76.0
margin_right = 743.0
margin_bottom = 148.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/LauncherContainer/VBoxContainer/MaxDLSpeed"]
margin_right = 743.0
margin_bottom = 34.0
text = "Maximum Download Speed (MB/s)"

[node name="Text" type="LineEdit" parent="MarginContainer/VBoxContainer/LauncherContainer/VBoxContainer/MaxDLSpeed"]
margin_top = 38.0
margin_right = 60.0
margin_bottom = 72.0
rect_min_size = Vector2( 50, 22 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 11 )

[node name="InstallDir" type="VBoxContainer" parent="MarginContainer/VBoxContainer/LauncherContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 743.0
margin_bottom = 148.0
size_flags_vertical = 0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/LauncherContainer/VBoxContainer/InstallDir"]
margin_right = 743.0
margin_bottom = 34.0
text = "Install directory:"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/LauncherContainer/VBoxContainer/InstallDir"]
margin_top = 38.0
margin_right = 743.0
margin_bottom = 72.0
custom_styles/normal = SubResource( 16 )
text = "Choose Path"

[node name="Mirrors" type="VBoxContainer" parent="MarginContainer/VBoxContainer/LauncherContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 743.0
margin_bottom = 890.0
size_flags_vertical = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/LauncherContainer/VBoxContainer/Mirrors"]
margin_right = 743.0
margin_bottom = 34.0
text = "Mirrors (each mirror on a new line)"

[node name="Text" type="TextEdit" parent="MarginContainer/VBoxContainer/LauncherContainer/VBoxContainer/Mirrors"]
margin_top = 38.0
margin_right = 743.0
margin_bottom = 738.0
rect_min_size = Vector2( 0, 35 )
size_flags_vertical = 3
theme = SubResource( 11 )
custom_colors/caret_color = Color( 0.239216, 0.160784, 0.317647, 1 )
text = "this is where the path GOES"
caret_blink = true
caret_blink_speed = 0.44

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 1011.0
margin_right = 755.0
margin_bottom = 1015.0

[connection signal="text_changed" from="MarginContainer/VBoxContainer/VersionContainer/Revision/Text" to="." method="_on_revision_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Threads/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/LauncherContainer/VBoxContainer/Threads/Text" to="." method="_on_threads_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/LauncherContainer/VBoxContainer/MaxDLSpeed/Text" to="." method="_on_maxdl_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LauncherContainer/VBoxContainer/InstallDir/Button" to="." method="_on_Button_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/LauncherContainer/VBoxContainer/Mirrors/Text" to="." method="_on_mirrors_changed"]
